--- a/next-auth/app/globals.css
+++ b/next-auth/app/globals.css
@@ -1,2 +1,19 @@
 @import "tailwindcss";
 
+.loader {
+    width: 18px;
+    height: 18px;
+    
+    border: 2px solid white;
+    border-top-color: transparent;
+    border-radius: 50%;
+    animation: spin 0.8s linear infinite;
+    display: inline-block;
+  }
+  
+  @keyframes spin {
+    100% {
+        transform: rotate(360deg);
+    }
+  }
+  
